--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -7,3 +7,11 @@ spring:
     username: root
     password: root
 # ==========================================================
+# localhostの接続
+# ==========================================================
+# spring:
+#   datasource:
+#     url: jdbc:mysql://localhost:3300/sampleDB
+#     username: root
+#     password: root
+# ==========================================================
