--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,17 +1,22 @@
-# ==========================================================
-# localhostの接続
-# ==========================================================
+# =============================================================
+# DB接続
+# =============================================================
+# local環境接続
+# =============================================================
 spring:
   datasource:
     url: jdbc:mysql://localhost:3300/sampleDB
     username: root
     password: root
-# ==========================================================
-# localhostの接続
-# ==========================================================
-# spring:
-#   datasource:
-#     url: jdbc:mysql://localhost:3300/sampleDB
-#     username: root
-#     password: root
-# ==========================================================
+# =============================================================
+# Docker環境
+# =============================================================
+---
+spring:
+  datasource:
+    url: jdbc:mysql://172.19.0.2:3300/sampleDB
+    username: root
+    password: root
+# =============================================================
+# mybatis 設定
+# =============================================================
