create: mybatis logic
selectの記述。
xmlファイルのみ。
次回Javaに着手

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -20,3 +20,11 @@ spring:
 # =============================================================
 # mybatis 設定
 # =============================================================
+---
+mybatis:
+  mapper-locations:
+  - classpath*:/mapper/mysql/*.xml
+  configuration:
+    map-underscore-to-camel-case: true
+  type-aliases-package: com.example.demo.domain.user.model
+    
