--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,9 +1,17 @@
 # =========================================================
 # mysqlの接続[localhost]
 # =========================================================
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3300/sampleDB
+#    username: root
+#    password: root
+# =========================================================
+# mysqlの接続[Docker]
+# =========================================================
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3300/sampleDB
+    url: jdbc:mysql://db/sampleDB
     username: root
     password: root
-# =========================================================
+    driver-class-name: com.mysql.cj.jdbc.Driver
