--- a/client/package.json
+++ b/client/package.json
@@ -1,31 +1,28 @@
 {
-  "name": "client",
+  "name": "pack",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "serve": "vite preview",
-    "build": "vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
     "axios": "^1.4.0",
-    "roboto-fontface": "*",
     "vue": "^3.3.4",
-    "vue-axios": "^3.5.2",
-    "vue-router": "^4.2.4",
-    "vuetify": "^3.0.0-beta.0",
-    "webfontloader": "^1.0.0"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@types/webfontloader": "^1.0.0",
+    "@tsconfig/node18": "^18.2.0",
+    "@types/node": "^18.17.0",
     "@vitejs/plugin-vue": "^4.2.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "vite-plugin-vuetify": "^1.0.0-alpha.12",
-    "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-tsc": "^1.8.5"
-  },
-  "type": "module"
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vue/tsconfig": "^0.4.0",
+    "npm-run-all": "^4.1.5",
+    "typescript": "~5.1.6",
+    "vite": "^4.4.6",
+    "vue-tsc": "^1.8.6"
+  }
 }
