--- a/app/client/package.json
+++ b/app/client/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "pack",
+  "name": "client",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
+    "build": "run-p type-check build-only --dest ../src/main/resources/static",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
-    "axios": "^1.4.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
