--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,35 +4,18 @@
 version: '3.9'
 services:
   # ================================================================================================================
-  # client server
+  # app server
   # ================================================================================================================
-  client:
-    container_name: client_server
-    image: node:18
-    volumes:
-      - ./client:/client
-    tty: true
-    depends_on:
-      - api
-    networks:
-      # ネットワークの指定
-      - CRUD_network # ネットワーク指定
-  # ================================================================================================================
-  # api server
-  # ================================================================================================================
-  api:
-    container_name: api_server
+  app:
+    container_name: app_server
     image: eclipse-temurin:18
     volumes:
-      - ./api:/api
+      - ./app:/app
     ports:
       - 8000:8080
     tty: true
-    depends_on:
-      - db
     networks:
-      # ネットワークの指定
-      - CRUD_network # ネットワーク指定
+      - CRUD_network
   # ================================================================================================================
   # database server
   # ================================================================================================================
