modify: docker-compose

--- a/dockercompose.yml
+++ b/dockercompose.yml
@@ -4,6 +4,24 @@ version: '3.9'
 # =====================================================================
 services:
   # ===================================================================
+  # app
+  # api ./app/api[eclipse-temurin:18]
+  # client ./app/client[node]
+  # ===================================================================
+  app:
+    container_name: application_server
+    image: eclipse-temurin:18
+    volumes:
+      - ./app:/app
+    tty: true
+    ports:
+      - 8000:8080
+      - 3000:3000
+    depends_on:
+      - DB
+    networks:
+      - CRUD
+  # ===================================================================
   # DB[Mysql]
   # DataBase:sampleDB
   # ===================================================================
