--- a/app/api/src/main/resources/application.yml
+++ b/app/api/src/main/resources/application.yml
@@ -7,3 +7,15 @@ spring:
     username: root
     password: root  
 # =============================================================
+# Mybatis
+# =============================================================
+mybatis:
+  mapper-locations:
+  - classpath*:/mapper/*.xml
+# =============================================================
+# Logging
+# =============================================================
+logging:
+  level:
+    com:
+      example: debug
