add: config file

--- a/app/api/src/main/resources/application.yml
+++ b/app/api/src/main/resources/application.yml
@@ -6,3 +6,18 @@ spring:
     url: jdbc:mysql://db/sampleDB
     username: root
     password: root
+---
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3300/sampleDB
+    username: root
+    password: root
+# ===============================================================
+# mybatis config
+# ===============================================================
+mybatis:
+  mapper-locations:
+  - classpath*:mapper/EmployeeMapper.xml
+  configuration:
+    map-underscore-to-camel-case: true
+  type-aliases-package: com.example.demo.entity
