modify: mybatis logic
動作確認はまだ

--- a/app/api/src/main/resources/application.yml
+++ b/app/api/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-# ===============================================================
-# DB接続
-# ===============================================================
+# =========================================================
+# mysql接続設定
+# =========================================================
 spring:
   datasource:
     url: jdbc:mysql://db/sampleDB
@@ -12,12 +12,13 @@ spring:
     url: jdbc:mysql://localhost:3300/sampleDB
     username: root
     password: root
-# ===============================================================
-# mybatis config
-# ===============================================================
+# =========================================================
+# mybatis
+# =========================================================
 mybatis:
   mapper-locations:
   - classpath*:mapper/EmployeeMapper.xml
   configuration:
     map-underscore-to-camel-case: true
   type-aliases-package: com.example.demo.entity
+# =========================================================
